lambda-appsync-proc/tests/fail/invalid_type_name_override.stderr
error: No type, enum or input named `Inexistant`
 --> tests/fail/invalid_type_name_override.rs:7:21
  |
7 |     name_override = Inexistant.field: NewName,
  |                     ^^^^^^^^^^
